# steamroom

./: .README.md.swp  .gitignore  Cargo.toml  FEATURES.md  LICENSE  LICENSE-APACHE  README.md  deps.txt  filesystem.txt  flake.nix  mise.toml  original_prompt.txt
crates/depotdownloader/: Cargo.toml
crates/depotdownloader/src/: cli.rs  download.rs  errors.rs  main.rs
crates/steam/: Cargo.toml  build.rs
crates/steam-client/: Cargo.toml
crates/steam-client/src/: credentials.rs  depot_config.rs  download.rs  lib.rs  manifest.rs
crates/steam-ffi/: Cargo.toml
crates/steam-ffi/src/: inner.rs  lib.rs
crates/steam/proto/steam/: content_manifest.proto  encrypted_app_ticket.proto  enums_clientserver.proto  enums_productinfo.proto  htmlmessages.proto  offline_ticket.proto  steammessages_accounthardware.steamclient.proto  steammessages_auth.steamclient.proto  steammessages_base.proto  steammessages_chat.steamclient.proto  steammessages_client_objects.proto  steammessages_clientlanp2p.proto  steammessages_clientmetrics.steamclient.proto  steammessages_clientserver.proto  steammessages_clientserver_appinfo.proto  steammessages_clientserver_login.proto  steammessages_clientserver_mms.proto  steammessages_clientserver_uds.proto  steammessages_clientserver_video.proto  steammessages_community.steamclient.proto  steammessages_contentsystem.steamclient.proto  steammessages_econ.steamclient.proto  steammessages_friendmessages.steamclient.proto  steammessages_gamenetworkingui.proto  steammessages_hiddevices.proto  steammessages_linkfilter.steamclient.proto  steammessages_lobbymatchmaking.steamclient.proto  steammessages_marketingmessages.steamclient.proto  steammessages_notifications.steamclient.proto  steammessages_offline.steamclient.proto  steammessages_parental.steamclient.proto  steammessages_parties.steamclient.proto  steammessages_partnerapps.steamclient.proto  steammessages_publishedfile.steamclient.proto  steammessages_qms.steamclient.proto  steammessages_remoteclient_service_messages.proto  steammessages_remoteplay.proto  steammessages_shader.steamclient.proto  steammessages_siteserverui.proto  steammessages_unified_base.steamclient.proto  (+15 more)
crates/steam/src/: lib.rs
crates/steam/src/auth/: mod.rs
crates/steam/src/cdn/: lancache.rs  mod.rs  server.rs
crates/steam/src/client/: mod.rs  msg.rs  multi.rs
crates/steam/src/connection/: encryption.rs  framing.rs  mod.rs
crates/steam/src/crypto/: mod.rs  rsa.rs
crates/steam/src/depot/: chunk.rs  manifest.rs
crates/steam/src/enums/: mod.rs
crates/steam/src/error/: mod.rs
crates/steam/src/messages/: header.rs  mod.rs
crates/steam/src/transport/: capture.rs  mod.rs  recording.rs  replay.rs  tcp.rs  websocket.rs
crates/steam/src/types/: key_value.rs  kv_binary.rs  mod.rs
crates/steam/src/util/: checksum.rs  compression.rs  mod.rs
crates/steam/tests/: kv_snapshots.rs  replay_tests.rs
crates/steamroom/: Cargo.toml  README.md  build.rs
crates/steamroom-cli/: Cargo.toml
crates/steamroom-cli/src/: cli.rs  download.rs  errors.rs  main.rs
crates/steamroom-client/: Cargo.toml  README.md
crates/steamroom-client/src/: credentials.rs  depot_config.rs  depot_config_tests.rs  download.rs  download_tests.rs  event.rs  lib.rs  manifest.rs  steam_creds.rs
crates/steamroom-ffi/: Cargo.toml
crates/steamroom-ffi/src/: inner.rs  lib.rs
crates/steamroom/proto/steam/: clientmetrics.proto  contenthubs.proto  enums.proto  steamdatagram_messages_auth.proto  steamdatagram_messages_sdr.proto  steammessages_accounthardware.steamclient.proto  steammessages_base.proto  steammessages_broadcast.steamclient.proto  steammessages_clientserver_2.proto  steammessages_clientserver_friends.proto  steammessages_clientserver_gameservers.proto  steammessages_clientserver_lbs.proto  steammessages_clientserver_ucm.proto  steammessages_clientserver_userstats.proto  steammessages_cloud.steamclient.proto  steammessages_contentsystem.steamclient.proto  steammessages_credentials.steamclient.proto  steammessages_datapublisher.steamclient.proto  steammessages_depotbuilder.steamclient.proto  steammessages_familygroups.steamclient.proto  steammessages_gamenetworking.steamclient.proto  steammessages_gamenotifications.steamclient.proto  steammessages_gamerecording.steamclient.proto  steammessages_gameservers.steamclient.proto  steammessages_hiddevices.proto  steammessages_inventory.steamclient.proto  steammessages_market.steamclient.proto  steammessages_parental_objects.proto  steammessages_player.steamclient.proto  steammessages_publishedfile.steamclient.proto  steammessages_remoteclient.proto  steammessages_remoteclient_discovery.proto  steammessages_remoteclient_service.steamclient.proto  steammessages_remoteclient_service_messages.proto  steammessages_secrets.steamclient.proto  steammessages_site_license.steamclient.proto  steammessages_sitelicenseclient.proto  steammessages_steamtv.steamclient.proto  steammessages_store.steamclient.proto  steammessages_storebrowse.steamclient.proto  (+16 more)
crates/steamroom/src/: lib.rs
crates/steamroom/src/apps/: mod.rs
crates/steamroom/src/auth/: mod.rs
crates/steamroom/src/cdn/: lancache.rs  mod.rs  pool.rs  server.rs
crates/steamroom/src/client/: mod.rs  msg.rs  multi.rs
crates/steamroom/src/connection/: encryption.rs  framing.rs  mod.rs
crates/steamroom/src/content/: mod.rs
crates/steamroom/src/crypto/: mod.rs  rsa.rs
crates/steamroom/src/depot/: chunk.rs  manifest.rs  mod.rs
crates/steamroom/src/enums/: mod.rs
crates/steamroom/src/error/: mod.rs
crates/steamroom/tests/: kv_snapshots.rs  replay_tests.rs
examples/python/: CMakeLists.txt  main.py  pyproject.toml
examples/python/src/: bindings.cpp
examples/python/tests/: test_bindings.py
fuzz/: Cargo.toml  README.md
fuzz/corpus/fuzz_binary_kv/: seed_appstate
fuzz/corpus/fuzz_frame/: seed_hello
fuzz/corpus/fuzz_manifest/: seed_v4
fuzz/corpus/fuzz_packet_header/: seed_encrypt_request  seed_logon_response
fuzz/corpus/fuzz_text_kv/: seed_appstate
fuzz/fuzz_targets/: binary_kv.rs  frame.rs  manifest.rs  packet_header.rs  text_kv.rs
(+1523 files in other folders)
