[package]
name = "depotdownloader"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "ddl"
path = "src/main.rs"

[dependencies]
steam = { workspace = true }
steam-client = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rpassword = { workspace = true }
qrcode = { workspace = true }
jiff = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
