[package]
name = "steam-client"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
steam = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
dirs-next = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
