[package]
name = "steam-ffi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
steam = { workspace = true }
steam-client = { workspace = true }
tokio = { workspace = true }
diplomat = "0.15"
diplomat-runtime = "0.15"
prost = { workspace = true }
zip = { workspace = true }
