[package]
name = "steamroom"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
ecb = { workspace = true }
rsa = { workspace = true }
hmac = { workspace = true }
sha1 = { workspace = true }
crc32fast = { workspace = true }
adler = { workspace = true }
getrandom = { workspace = true }
rand = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
lzma-rs = { workspace = true }
zip = { workspace = true }
winnow = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
async-channel = { workspace = true }

# Runtime-specific: only needed for transport impls, not core library
reqwest = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3"

[build-dependencies]
prost-build = { workspace = true }
protox = { workspace = true }
