[package]
name = "steamroom-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Command-line tool for downloading Steam depot content"
authors = ["Lander Brandt"]
repository = "https://github.com/landaire/steamroom"
readme = "../../README.md"
keywords = ["steam", "depot", "download", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "steamroom"
path = "src/main.rs"

[dependencies]
steamroom = { workspace = true }
steamroom-client = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rpassword = { workspace = true }
qrcode = { workspace = true }
jiff = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rootcause = { workspace = true }
regex = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true }
zip = { workspace = true }
dirs-next = { workspace = true }
base64 = { workspace = true }
