[package]
name = "steamroom-client"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "High-level Steam depot download orchestration and delta patching"
authors = ["Lander Brandt"]
repository = "https://github.com/landaire/steamroom"
documentation = "https://docs.rs/steamroom-client"
readme = "README.md"
keywords = ["steam", "depot", "download", "delta", "patching"]
categories = ["network-programming"]

[features]
serde = ["steamroom/serde"]

[dependencies]
steamroom = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rootcause = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
dirs-next = { workspace = true }
sha2 = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = "3"
