[package]
name = "steamroom-ffi"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
steamroom = { workspace = true }
steamroom-client = { workspace = true }
tokio = { workspace = true }
diplomat = "0.15"
diplomat-runtime = "0.15"
prost = { workspace = true }
zip = { workspace = true }
