[project]
name = "steam-ffi-example"
version = "0.1.0"
description = "Python bindings for steam-ffi via nanobind"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
markers = ["integration: requires network access to Steam"]

[tool.scikit-build]
cmake.build-type = "Release"
